# edery

./: pyproject.toml
edery/scripts/: say_hello.py
