[tool.poetry]
name = "edery"
version = "0.1.0"
description = ""
authors = ["Artem Iliushin <thatsforsure@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "edery.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipython = "^8.13.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
